# Transcompiler

./: ADVCALC2IR  CMakeLists.txt
src/: ADVCALC2IR.c  AdvCalc.c  TODO.txt  a.out  evet.adv  example.ll  file.ll  formatController.h  intermediate.ll  llvm.c  main.c  main.ll  makefile  postfixCalculator.h  sample.txt  token.h  tokenizer.h
